--- a/bot/package.json
+++ b/bot/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "type": "commonjs",
   "dependencies": {
-    "@coral-xyz/anchor": "0.29.0",
+    "@coral-xyz/anchor": "^0.29.0",
     "@solana/spl-token": "^0.3.7",
-    "@solana/web3.js": "1.73.0",
-    "axios": "1.4.0",
-    "winston": "3.8.2",
+    "@solana/web3.js": "^1.73.0",
+    "axios": "^1.4.0",
+    "winston": "^3.8.2",
     "ws": "^8.18.1"
   },
   "scripts": {
+    "prestart": "node utils/idlSanitizer.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
