--- a/bot/package.json
+++ b/bot/package.json
@@ -2,17 +2,18 @@
   "name": "solana-flash-arb-bot",
   "version": "1.0.0",
   "type": "commonjs",
-  "dependencies": {
-    "@coral-xyz/anchor": "^0.29.0",
-    "@solana/spl-token": "^0.3.7",
-    "@solana/web3.js": "^1.73.0",
-    "axios": "^1.4.0",
-    "winston": "^3.8.2",
-    "ws": "^8.18.1"
-  },
   "scripts": {
-    "prestart": "node utils/idlSanitizer.js",
+    "presanitize": "node ./utils/validateConfigs.js",
+    "sanitize": "node ./utils/idlSanitizer.js",
+    "prestart": "node ./utils/run.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@coral-xyz/anchor": "0.29.0",
+    "@solana/web3.js": "1.73.0",
+    "@solana/spl-token": "0.3.7",
+    "axios": "1.4.0",
+    "winston": "3.8.2"
   }
 }
