--- a/bot/package.json
+++ b/bot/package.json
@@ -4,7 +4,9 @@
     "start": "node index.js",
     "dev": "nodemon --watch . --exec 'npm start'",
     "validate": "cd .. && node utils/validateConfigs.js",
-    "sanitize": "cd .. && node utils/idlSanitizer.js"
+    "sanitize": "cd .. && node utils/idlSanitizer.js",
+    "name": "solana-flash-arb",
+    "private": "true"
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.29.0",
@@ -12,7 +14,8 @@
     "@solana/web3.js": "1.73.0",
     "axios": "1.4.0",
     "colorette": "^2.0.20",
-    "winston": "3.8.2"
+    "winston": "3.8.2",
+    "module-alias": "^2.2.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
