--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.29.0",
-    "@solana/spl-token": "0.3.7",
-    "@solana/web3.js": "1.73.0",
-    "axios": "1.4.0",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/web3.js": "^1.98.0",
+    "axios": "^1.8.4",
     "colorette": "^2.0.20",
-    "winston": "3.8.2",
-    "module-alias": "^2.2.3"
+    "module-alias": "^2.2.3",
+    "winston": "3.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
