--- a/program/flash-arbitrage/Cargo.toml
+++ b/program/flash-arbitrage/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "flash_arbitrage"
 version = "0.1.0"
-description = "Solana Flash Loan Arbitrage Program"
 edition = "2021"
+description = "Solana Flash Loan Arbitrage Program"
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
-solana-program = "1.16.0"
+anchor-lang = { workspace = true }
+anchor-spl = { workspace = true }
+solana-program = { workspace = true }
